# inkwell

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  config.toml  gallery-dl.conf  gallery-dl.deviantart.conf  gallery-dl.pixiv.conf  gallery-dl.xcom.conf  pyproject.toml
.github/workflows/: build.yml
.streamlit/: config.toml
docs/: DESIGN.md  DEV_GUIDE.md  ROADMAP.md  architecture.html  workflow-diagram-prompt.md  workflows.html
docs/issues/: sqlite-threading-error.md
docs/specs/: gallery-tab.md
src/: app.py  bootstrap.py  config_loader.py  cookie_manager.py  db.py  downloader.py  models.py  nas_monitor.py  rate_limiter.py  scheduler.py  url_validator.py  zipper.py
src/sections/: artists.py  downloads.py  logs.py  settings.py
src/sites/: base.py  deviantart.py  pixiv.py  xcom.py
tests/: conftest.py  test_downloader.py  test_files.py  test_nas_monitor.py  test_rate_limiter.py  test_sites.py  test_url_validator.py  test_zipper.py
